fixed nav bar, headings and the alignment of the elements in the header

--- a/uppgift-css-style/stylesheet.css
+++ b/uppgift-css-style/stylesheet.css
@@ -25,45 +25,58 @@
     color: midnightblue;
 }
 
+
 body{
-    background-color:antiquewhite;
+    background-color:rgb(61, 67, 75);
 }
 
 #top{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    align-items: center;
+    align-content: stretch;
     background-color:whitesmoke;
     grid-area: top;
     justify-self: center;
     columns: 2;
     margin-top: 20px;
-    
 }
     .align-left{
-        float: left;
+        float: center;
+        margin: 12px;
+
     }
     .align-right{
-        float: right;
+        float: center;
+        margin: 20px;
     }
     .small{
         height: 100px;
-        margin: 20px;
+        
+        vertical-align: baseline;
+    }
+    h1{
+        float: center;
+        text-align: center;
     }
 
 
-.head-title{
-    vertical-align: center;
-    justify-content: center;
-}
 
 nav{
-    background-color:whitesmoke;
+    grid-area: span 2;
+    display: inline-block;
+    background-color:aliceblue;
     grid-area: nav;
-    columns: 2;
     justify-self: center;
-    align-content: baseline;
     margin-top:20px;
-    place-items: ;
+    padding: 20px;
 }
-
+    a{
+        padding:10px;
+        margin: 5px;
+        background-color: rgb(19, 56, 119);
+        color: aliceblue;
+    }
 
 
 aside{
@@ -76,6 +89,13 @@ aside{
 aside>ul>li{
     margin-bottom: 1.5em;
 }
+h2, aside>h3{
+    text-align: center;
+    padding: 0.5em;
+    background-color: black;
+    color: aliceblue;
+}
+
 
 
 article{
@@ -84,11 +104,20 @@ article{
     margin-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 10px;
+}
+article>h3,article,h4{
+    padding-left: 1.5em;
 }
 .education-and-experience{
     margin-bottom: 20px;
 }
-
+.institution{
+    font-style: italic;
+}
+.job-title{
+    padding-top: 1.5em;
+}
 
 
 footer{
@@ -96,7 +125,7 @@ footer{
     grid-area: footer;
     justify-self: center;
     padding-top: 15px;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
     padding-left: 39%;
     padding-right: 39%;
     margin-bottom: 20px;
